--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -16,9 +16,20 @@
   border-radius: 7px;
 }
 
+.TodoListMain .countList {
+  color: #254D32;
+  background-color: rgba(255,255,255,.5);
+  padding: 15px;
+  font-size: 20px;
+  border-radius: 7px;
+  list-style: none;
+  width: 225px;
+}
+
 .TodoListMain .theList {
   list-style: none;
   padding-left: 0;
+    margin: 0;
   width: 250px;
 } 
 .TodoListMain .theList li {
@@ -26,7 +37,6 @@
   background-color: rgba(255,255,255,.5);
   padding: 15px;
   font-size: 20px;
-  margin-bottom: 15px;
   border-radius: 7px;
   list-style: none;
   transition: background-color .2s ease-out;
