--- a/src/TodoList.css
+++ b/src/TodoList.css
@@ -21,9 +21,11 @@
   background-color: rgba(255,255,255,.5);
   padding: 15px;
   font-size: 20px;
+  margin: 0;
   border-radius: 7px;
   list-style: none;
-  width: 225px;
+  max-width: 225px;
+  text-align: center;
 }
 
 .TodoListMain .theList {
